[package]
name = "lexmark-exporter"
version = "0.1.0"
authors = ["Cees-Jan Kiewiet <ceesjank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
futures = { version = "0.3", default-features = false }
rand = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1"
serde_json = "1"
